--- a/src/frontend/home.html
+++ b/src/frontend/home.html
@@ -29,7 +29,7 @@
 			<h1>Admin Dashboard</h1>
 			<p id="currentUser"></p>
 			<h3>Medicinas</h3>
-			<div>
+			<div class="m-2">
 				<span><input type="file" id="medicinesFileInput" /></span>
 				<span
 					><button id="loadMedicines" class="btn btn-success">
@@ -37,7 +37,11 @@
 					</button></span
 				>
 			</div>
-
+			<div>
+				<button id="getReport" class="btn btn-primary w-100 m-2">
+					Generar reporte en pdf
+				</button>
+			</div>
 			<div class="d-flex flex-column" id="medicines"></div>
 		</div>
 		<script>
@@ -53,6 +57,7 @@
 			let medicines = document.getElementById("medicines");
 			let medicinesFileInput = document.getElementById("medicinesFileInput");
 			let loadMedicines = document.getElementById("loadMedicines");
+			let gerReport = document.getElementById("getReport");
 
 			//getting medicines
 			getMedicines();
@@ -130,6 +135,11 @@
 					});
 				};
 				reader.onerror = () => console.error(reader.error);
+			});
+
+			//generate pdf report
+			getReport.addEventListener("click", () => {
+				window.open("http://localhost:5000/reports/medicine");
 			});
 		</script>
 		<script
